--- a/gb/23/6/7/n14011497.md
+++ b/gb/23/6/7/n14011497.md
@@ -1,25 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加州立法者否决 纽森改革加州环境法的提议</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14011500-edafbdd8f85ab7f93ef651bd6b794859-600x400.jpeg" />
 <h6>州长纽森（Gavin Newsom）最近试图绕过环境法规，以加快某些项目建设的尝试遭否决。（Shutterstock）
 </h6>
 <hr>
-	<p>【大纪元2023年06月07日讯】（英文大纪元记者Travis Gillmore报导／殷瑞娜编译）5月25日，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>参议院预算委员会以3:0，否决了加州州长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E6%A3%AE.md#1">纽森</a>（Gavin Newsom）最近试图绕过环境法规，以加快某些项目建设的尝试。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E6%A3%AE.md#1">纽森</a>在5月19日宣布他的计划的新闻稿中说：“实现<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>世界领先的气候目标的唯一途径是，更快地建设、建设、建设。这项提案是半个世纪以来，最雄心勃勃地削减繁文缛节和简化监管的努力，现在是时候充分利用纳税人的钱，并在创造数十万个好工作的同时取得成果。”</p>
+	<p>【大纪元2023年06月07日讯】（英文大纪元记者Travis Gillmore报导／殷瑞娜编译）5月25日，加州参议院预算委员会以3:0，否决了加州州长纽森（Gavin Newsom）最近试图绕过环境法规，以加快某些项目建设的尝试。</p>
+<p>纽森在5月19日宣布他的计划的新闻稿中说：“实现加州世界领先的气候目标的唯一途径是，更快地建设、建设、建设。这项提案是半个世纪以来，最雄心勃勃地削减繁文缛节和简化监管的努力，现在是时候充分利用纳税人的钱，并在创造数十万个好工作的同时取得成果。”</p>
 <p>州长的提案在宣布后仅几天，就进入了预算委员会的议程，并且在法定截止日期前一周。因此，该小组建议推迟批准，直到立法机关进行彻底辩论。</p>
 <p>立法者称，法案语言复杂，而且讨论细节的时间有限。法案通过其原议院的截止日期为6月2日。</p>
-<p>这些提案侧重于简化行政审查，并加快被<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E7%8E%AF%E5%A2%83.md#1">加州环境</a>质量法案（California Environmental Quality Act，简称为CEQA）搁置的项目的司法审查。</p>
+<p>这些提案侧重于简化行政审查，并加快被加州环境质量法案（California Environmental Quality Act，简称为CEQA）搁置的项目的司法审查。</p>
 <p>一个项目，下令在15号州际公路上，修建野生动物通道，以便在加州和内华达州之间，建设Brightline West高速铁路项目。</p>
 <p>据法律专家称，还有一项计划，对该州的一些受保护物种进行重新分类，这将允许在目前受环境法限制的土地上进行开发，环保主义者对此表示谴责。</p>
 <p>随着该州寻求在数十亿美元的联邦资金帮助下，实现其雄心勃勃的可再生能源目标，重新考虑CEQA限制的举措随之而来。</p>
 <p>为了获得更多联邦资金，纽森正在寻求加快建设基础设施项目，以便加州有资格获得更高比例的联邦资金，因为批准指南包括准备开发和正在进行的项目提案。</p>
-<p>纽森于5月19日发布了一项行政命令，详细说明了监管<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%94%B9%E9%9D%A9.md#1">改革</a>的必要性，以便快速推进该州的能源、水资源、交通和通信基础设施现代化计划。</p>
+<p>纽森于5月19日发布了一项行政命令，详细说明了监管改革的必要性，以便快速推进该州的能源、水资源、交通和通信基础设施现代化计划。</p>
 <p>该指令，旨在“创造高质量的就业机会，加速我们向清洁能源的过渡，紧急应对气候危机，并建立面向21世纪的交通网络”，行政命令中写道。</p>
 <p>它指示州机构寻找发展机会，并优先考虑“通过公共交通、铁路、自行车和步行交通以及零排放车辆，为人员和货物，提供清洁和可持续的交通方式”。</p>
 <p>据专家称，1970年通过的CEQA经常被指责为，加州众所周知的缓慢的许可程序，代价高昂且耗时，它减缓和限制了包括住房和交通在内的一长串项目的增长和发展。</p>
-<p>商界领袖和共和党立法者长期以来，一直认为CEQA禁止开发，许多人欢迎纽森最近提出的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%94%B9%E9%9D%A9.md#1">改革</a>。</p>
+<p>商界领袖和共和党立法者长期以来，一直认为CEQA禁止开发，许多人欢迎纽森最近提出的改革。</p>
 <p>“加州参议院共和党人多年来，一直倡导CEQA改革。我们很高兴，州长纽森终于采取行动，我们支持他帮助建设更多住房和基础设施项目的承诺。”来自圣地亚哥的参议员布赖恩·W·琼斯（Brian W. Jones），在5月19日的一份声明中说。</p>
 <p>参议院少数党核心小组主席、来自亨廷顿海滩的共和党人，珍妮特·阮（Janet Nguyen）重申了该党的承诺。</p>
 <p>她在与琼斯的联合新闻稿中说：“我们渴望在这个领域推动加州向前发展，这样我们就可以在合理的时间范围内，不需要昂贵的花费，建造更多的住房、蓄水设施和合理的基础设施项目。”</p>
@@ -35,45 +35,36 @@
 <p>该报告由前州众议员和2005年至2013年担任洛杉矶市长的安东尼奥·维拉莱戈萨（Antonio Villaraigosa）领导，他现在是加州的基础设施顾问。◇</p>
 <p>责任编辑：宋佳怡 </p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/9/n13564946.md#1">奥克兰学区拟关闭部分学校 反对者：违反加州环境法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/30/n13682136.md#1">纽森发政令 吁实施更严厉节水措施</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/16/n13760543.md#1">湾区2炼油厂转生物燃料项目 遭环保人士挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/2/n13771767.md#1">加州通过全面措施 减量一次性塑料制品</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/2/9/n13564946.md#1">奥克兰学区拟关闭部分学校 反对者：违反加州环境法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/30/n13682136.md#1">纽森发政令 吁实施更严厉节水措施</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/16/n13760543.md#1">湾区2炼油厂转生物燃料项目 遭环保人士挑战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/2/n13771767.md#1">加州通过全面措施 减量一次性塑料制品</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/1/n10446785.md#1" target="_blank">共产暴政录：从船王卢作孚自杀看中共劫财手段</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/7/n10035147.md#1" target="_blank">林辉：雍和宫躲过文革有因 毁佛像者下场惨</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/1/n14008186.md#1">希腊僧侣82岁过世 一生从未见过女人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009563.md#1">美盲童濒死视力变正常 看见上帝与未来事件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006059.md#1">【未解之谜】虎妈与鸡娃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/25/n14004005.md#1">古风悠悠：赵昚不淫宫娥得皇位</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/2/n14008428.md#1">【未解之谜】解密507所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/5/n14010453.md#1">【百年真相】宣扬马列招厄运 民国报人子孙泣血</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/6/n14011282.md#1">【秦鹏观察】中共的海洋野心 中企帮伊朗被制裁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/6/n14010917.md#1">【全球新闻】大反攻遭俄军挫败？ 乌克兰神秘不作声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009843.md#1">供应链转移 美进口中国商品跌至10年新低</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/5/n14010095.md#1">英驻华大使馆发文展示六四历史 遭中共急删</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/1/n14008245.md#1">组图：15款最可靠SUV 牧马人居首 丰田占4</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009672.md#1">阿汤哥让做飞行培训 受压约1,600磅 演员全吐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009931.md#1">56岁港姐冠军陈法蓉仍打单 自曝已立好遗嘱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/5/n14010615.md#1">力劝周迅别上某选秀节目 那英：太吓人了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009879.md#1">港星蒋志光传拒续约 TVB官网已下架资料</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009590.md#1">丧夫后又罹重病 席琳·狄翁现仅求健康与唱歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/3/n14009389.md#1">了解六类茶的赏味期 爱茶无忧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/1/n14007688.md#1">如何预防和治疗灰指甲？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/22/n14001852.md#1">退休后老得更快？ 70岁是老年健康决胜点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/3/n14009430.md#1">肚子咕咕叫 突然一声巨响 这种肠鸣可能是肠癌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009677.md#1">加拿大一片奇树天生弯曲 吸引游客造访</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307633.md#1">【新闻五人行】官员玩“掼蛋” 中南海也怕？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307724.md#1">【未解之谜】神农架野人之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307546.md#1">【中国禁闻】中国爆盗卖遗体黑色产业链</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/7/n14011497.htm">加州立法者否决 纽森改革加州环境法的提议</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011497.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/7/n14011497.htm">加州立法者否决 纽森改革加州环境法的提议</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/7/n14011497.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
